--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,6 @@
-[package]
-name = "portfolio"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-[dependencies]
-askama = "0.12.0"
-askama_rocket = "0.12.0"
-rocket = { version = "0.5.0", default-features = false }
-
-[dev-dependencies]
-cargo-watch = "8.5.2"
+members = [
+  "ci",
+  "server",
+]
