--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,10 @@
 [workspace]
-
+resolver = "2"
 members = [
   "ci",
+  "domain",
+  "persistence",
+  "persistence/test_utils",
   "server",
+  "views",
 ]
