--- a/views/Cargo.toml
+++ b/views/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "server"
+name = "views"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-domain = { path = "../domain" }
+askama = "0.12.0"
+askama_rocket = "0.12.0"
 rocket = { version = "0.5.0", default-features = false }
-views = { path = "../views" }
