--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
-[workspace]
-resolver = "2"
-members = [
-  "ci",
-  "domain",
-  "persistence",
-  "persistence/test_utils",
-  "server",
-  "views",
-]
+[package]
+name = "portfolio"
+version = "0.1.0"
+edition = "2021"
+
+[dependencies]
+askama = "0.12.1"
+askama_rocket = "0.12.0"
+rocket = { version = "0.5.0", default-features = false }
+
