--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 askama = "0.12.1"
 askama_rocket = "0.12.0"
 rocket = { version = "0.5.0", default-features = false }
-
+ws = { package = "rocket_ws", version = "0.1.0" }
