--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ publish = false
 askama = "0.12.1"
 askama_rocket = "0.12.0"
 rocket = { version = "0.5.0", default-features = false }
+tokio = { version = "1.40.0", features = ["full"] }
