--- a/bacon.toml
+++ b/bacon.toml
@@ -10,7 +10,7 @@ on_change_strategy = "kill_then_restart"
 
 [jobs.css]
 command = ["tailwindcss", "-m", "-i", "input.css", "-o", "public/styles/tailwind.css"]
-watch = [ "input.css", "templates", "public" ]
+watch = [ "input.css", "tailwind.config.js", "templates", "public" ]
 need_stdout = false
 allow_warnings = true
 background = false
