--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ publish = false
 [dependencies]
 askama = "0.12.1"
 askama_rocket = "0.12.0"
+chrono = "0.4.38"
 rocket = { version = "0.5.0", default-features = false }
 tokio = { version = "1.40.0", features = ["full"] }
